[tool.poetry]
name = "todo-extension"
version = "0.1.0"
description = ""
authors = ["Daniel Eades <danieleades@hotmail.com>"]
readme = "README.md"
packages = [{include = "todo_extension"}]

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
